k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  type: LoadBalancer
  selector:
    app: echo-server
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          ports:
            - containerPort: 9000
          image: hashicorp/http-echo
          args: ['-text', 'OK', '-listen', ':9000']
