k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /foo
            pathType: Exact
            backend:
              service:
                port:
                  number: 8000
                name: echo-service
          - path: /bar
            pathType: Prefix
            backend:
              service:
                port:
                  number: 8000
                name: echo-service
